--- a/_includes/header/header-slim.html
+++ b/_includes/header/header-slim.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-12">
         <div class="it-header-slim-wrapper-content">
-          <a class="d-none d-lg-block navbar-brand" href="https://rabbit-world.github.io/">Rabbit World</a>
+          <a class="d-none d-lg-block navbar-brand" href="https://rabbit-world.github.io/" target="_blank">Rabbit World</a>
           <div class="nav-mobile">
             <nav>
               <a class="it-opener d-lg-none" data-toggle="collapse" href="#menu1" role="button" aria-expanded="false" aria-controls="menu1">
@@ -16,7 +16,7 @@
                 <ul class="link-list">
                   <li><a href="#">Countries</a></li>
                   <li><a href="#">Languages</a></li>
-                  <li class="d-lg-none"><a href="https://rabbit-world.github.io/">Rabbit World</a></li>
+                  <li class="d-lg-none"><a href="https://rabbit-world.github.io/" target="_blank">Rabbit World</a></li>
                 </ul>
               </div>
             </nav>
