--- a/_includes/header/header-lang-switch.html
+++ b/_includes/header/header-lang-switch.html
@@ -25,6 +25,47 @@
       </div>
     </div>
   </div>
+<div class="dropdown-menu">
+<div class="row">
+<div class="col-12">
+<div class="link-list-wrapper">
+<ul class="link-list">
+<li><a class="dropdown-item list-item" href="../at/"><span>AUSTRIA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+<li><a class="dropdown-item list-item" href="../be/"><span>BELGIUM <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+<li><a class="dropdown-item list-item" href="../bg/"><span>BULGARIA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+<li><a class="dropdown-item list-item" href="../hr/"><span>CROATIA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+<li><a class="dropdown-item list-item" href="../cy/"><span>CYPRUS <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+<li><a class="dropdown-item list-item" href="../cz/"><span>CZECH REPUBLIC <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+<li><a class="dropdown-item list-item" href="../dk/"><span>DENMARK <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+<li><a class="dropdown-item list-item" href="../ee/"><span>ESTONIA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+<li><a class="dropdown-item list-item" href="../fi/"><span>FINLAND <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+<li><a class="dropdown-item list-item" href="../fr/"><span>FRANCE <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+<li><a class="dropdown-item list-item" href="../de/"><span>GERMANY <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+<li><a class="dropdown-item list-item" href="../gr/"><span>GREECE <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+<li><a class="dropdown-item list-item" href="../hu/"><span>HUNGARY <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+<li><a class="dropdown-item list-item" href="../is/"><span>ICELAND <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+<li><a class="dropdown-item list-item" href="../ie/"><span>IRELAND <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+<li><a class="dropdown-item list-item" href="../lv/"><span>LATVIA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+<li><a class="dropdown-item list-item" href="../le/"><span>LIECHTENSTEEIN <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+<li><a class="dropdown-item list-item" href="../lt/"><span>LITHUANIA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+<li><a class="dropdown-item list-item" href="../lu/"><span>LUXEMBOURG <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+<li><a class="dropdown-item list-item" href="../mt/"><span>MALTA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+<li><a class="dropdown-item list-item" href="../nl/"><span>NETHERLANDS <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+<li><a class="dropdown-item list-item" href="../no/"><span>NORWAY <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+<li><a class="dropdown-item list-item" href="../pl/"><span>POLAND <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+<li><a class="dropdown-item list-item" href="../pt/"><span>PORTUGAL <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+<li><a class="dropdown-item list-item" href="../ro/"><span>ROMANIA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+<li><a class="dropdown-item list-item" href="../sk/"><span>SLOVAKIA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+<li><a class="dropdown-item list-item" href="../sl/"><span>SLOVENIA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+<li><a class="dropdown-item list-item" href="../es/"><span>SPAIN <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+<li><a class="dropdown-item list-item" href="../se/"><span>SWEDEN <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+<li><a class="dropdown-item list-item" href="../en/"><span>WORLDWIDE <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+</div>
 </div>
 {% else %}
 
