--- a/_includes/header/header-slim.html
+++ b/_includes/header/header-slim.html
@@ -14,8 +14,7 @@
               </a>
               <div class="link-list-wrapper collapse" id="menu1">
                 <ul class="link-list">
-                  <li><a href="#">Countries</a></li>
-                  <li><a href="#">Languages</a></li>
+                  <li><a href="https://www.hostinger.com/referral?REFERRALCODE=RABBITWORLD">You got 1 Invite!</a></li>
                   <li class="d-lg-none"><a href="https://rabbit-world.github.io/" target="_blank">Rabbit World</a></li>
                 </ul>
               </div>
