--- a/_includes/header/header-lang-switch.html
+++ b/_includes/header/header-lang-switch.html
@@ -54,36 +54,37 @@
 	  <div class="col-12">
 		<div class="link-list-wrapper">
 		  <ul class="link-list">
-			<li><a class="dropdown-item list-item" href="../at/"><span>AUSTRIA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
-			<li><a class="dropdown-item list-item" href="../be/"><span>BELGIUM <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
-			<li><a class="dropdown-item list-item" href="../bg/"><span>BULGARIA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
-			<li><a class="dropdown-item list-item" href="../hr/"><span>CROATIA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
-			<li><a class="dropdown-item list-item" href="../cy/"><span>CYPRUS <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
-			<li><a class="dropdown-item list-item" href="../cz/"><span>CZECH REPUBLIC <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
-			<li><a class="dropdown-item list-item" href="../dk/"><span>DENMARK <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
-			<li><a class="dropdown-item list-item" href="../ee/"><span>ESTONIA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
-			<li><a class="dropdown-item list-item" href="../fi/"><span>FINLAND <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
-			<li><a class="dropdown-item list-item" href="../fr/"><span>FRANCE <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
-			<li><a class="dropdown-item list-item" href="../de/"><span>GERMANY <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
-			<li><a class="dropdown-item list-item" href="../gr/"><span>GREECE <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
-			<li><a class="dropdown-item list-item" href="../hu/"><span>HUNGARY <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
-			<li><a class="dropdown-item list-item" href="../is/"><span>ICELAND <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
-			<li><a class="dropdown-item list-item" href="../ie/"><span>IRELAND <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
-			<li><a class="dropdown-item list-item" href="../lv/"><span>LATVIA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
-			<li><a class="dropdown-item list-item" href="../le/"><span>LIECHTENSTEEIN <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
-			<li><a class="dropdown-item list-item" href="../lt/"><span>LITHUANIA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
-			<li><a class="dropdown-item list-item" href="../lu/"><span>LUXEMBOURG <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
-			<li><a class="dropdown-item list-item" href="../mt/"><span>MALTA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+			<li><a class="dropdown-item list-item" href="../at/"><span>AT - AUSTRIA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+			<li><a class="dropdown-item list-item" href="../be/"><span>BE - BELGIUM <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+			<li><a class="dropdown-item list-item" href="../bg/"><span>BG - BULGARIA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+			<li><a class="dropdown-item list-item" href="../hr/"><span>HR - CROATIA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+			<li><a class="dropdown-item list-item" href="../cy/"><span>CY - CYPRUS <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+			<li><a class="dropdown-item list-item" href="../cz/"><span>CZ - CZECH REPUBLIC <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+			<li><a class="dropdown-item list-item" href="../dk/"><span>DK - DENMARK <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+			<li><a class="dropdown-item list-item" href="../ee/"><span>EE - ESTONIA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+			<li><a class="dropdown-item list-item" href="../fi/"><span>FI - FINLAND <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+			<li><a class="dropdown-item list-item" href="../fr/"><span>FR - FRANCE <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+			<li><a class="dropdown-item list-item" href="../de/"><span>DE - GERMANY <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+			<li><a class="dropdown-item list-item" href="../gr/"><span>GR - GREECE <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+			<li><a class="dropdown-item list-item" href="../hu/"><span>HU - HUNGARY <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+			<li><a class="dropdown-item list-item" href="../is/"><span>IS - ICELAND <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+			<li><a class="dropdown-item list-item" href="../ie/"><span>IE - IRELAND <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+			<li><a class="dropdown-item list-item" href="../italy/"><span>IT - ITALY <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+			<li><a class="dropdown-item list-item" href="../lv/"><span>LV - LATVIA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+			<li><a class="dropdown-item list-item" href="../le/"><span>LE - LIECHTENSTEEIN <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+			<li><a class="dropdown-item list-item" href="../lt/"><span>LT - LITHUANIA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+			<li><a class="dropdown-item list-item" href="../lu/"><span>LU - LUXEMBOURG <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+			<li><a class="dropdown-item list-item" href="../mt/"><span>MT - MALTA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
 			<li><a class="dropdown-item list-item" href="../nl/"><span>NETHERLANDS <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
-			<li><a class="dropdown-item list-item" href="../no/"><span>NORWAY <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
-			<li><a class="dropdown-item list-item" href="../pl/"><span>POLAND <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
-			<li><a class="dropdown-item list-item" href="../pt/"><span>PORTUGAL <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
-			<li><a class="dropdown-item list-item" href="../ro/"><span>ROMANIA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
-			<li><a class="dropdown-item list-item" href="../sk/"><span>SLOVAKIA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
-			<li><a class="dropdown-item list-item" href="../sl/"><span>SLOVENIA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
-			<li><a class="dropdown-item list-item" href="../es/"><span>SPAIN <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
-			<li><a class="dropdown-item list-item" href="../se/"><span>SWEDEN <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
-			<li><a class="dropdown-item list-item" href="../en/"><span>WORLDWIDE <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+			<li><a class="dropdown-item list-item" href="../no/"><span>NO - NORWAY <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+			<li><a class="dropdown-item list-item" href="../pl/"><span>PL - POLAND <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+			<li><a class="dropdown-item list-item" href="../pt/"><span>PT - PORTUGAL <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+			<li><a class="dropdown-item list-item" href="../ro/"><span>RO - ROMANIA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+			<li><a class="dropdown-item list-item" href="../sk/"><span>SK - SLOVAKIA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+			<li><a class="dropdown-item list-item" href="../sl/"><span>SL - SLOVENIA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+			<li><a class="dropdown-item list-item" href="../es/"><span>ES - SPAIN <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+			<li><a class="dropdown-item list-item" href="../se/"><span>SE - SWEDEN <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+			<li><a class="dropdown-item list-item" href="../euro-agency/"><span>WW - WORLDWIDE <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
 		  </ul>
 		</div>
 	  </div>
