--- a/_includes/header/header-lang-switch.html
+++ b/_includes/header/header-lang-switch.html
@@ -29,7 +29,7 @@
 {% else %}
 
 {% endif %}
-<!-- Language Switch -->
+<!-- Country Switch -->
 <div class="nav-item dropdown">
   <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-expanded="false">
     <span>Country</span>
@@ -42,18 +42,6 @@
       <div class="col-12">
         <div class="link-list-wrapper">
           <ul class="link-list">
-            <li><a class="list-item active" href="/euro-agency/it/" title="Versione italiana"><span>IT</span></a></li>
-            <li><a class="list-item " href="/euro-agency/" title="Versione inglese"><span>EN</span></a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="dropdown-menu">
-	<div class="row">
-	  <div class="col-12">
-		<div class="link-list-wrapper">
-		  <ul class="link-list">
 			<li><a class="dropdown-item list-item" href="../at/"><span>AT - AUSTRIA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
 			<li><a class="dropdown-item list-item" href="../be/"><span>BE - BELGIUM <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
 			<li><a class="dropdown-item list-item" href="../bg/"><span>BG - BULGARIA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
@@ -84,7 +72,17 @@
 			<li><a class="dropdown-item list-item" href="../sl/"><span>SL - SLOVENIA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
 			<li><a class="dropdown-item list-item" href="../es/"><span>ES - SPAIN <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
 			<li><a class="dropdown-item list-item" href="../se/"><span>SE - SWEDEN <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
-			<li><a class="dropdown-item list-item" href="../euro-agency/"><span>WW - WORLDWIDE <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+			<li><a class="dropdown-item list-item active" href="../euro-agency/"><span>WW - WORLDWIDE <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="dropdown-menu">
+	<div class="row">
+	  <div class="col-12">
+		<div class="link-list-wrapper">
+		  <ul class="link-list">
 		  </ul>
 		</div>
 	  </div>
