--- a/_includes/header/header-lang-switch.html
+++ b/_includes/header/header-lang-switch.html
@@ -44,7 +44,7 @@
 			<li><a class="dropdown-item list-item" href="../sl/"><span>SL - SLOVENIA <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
 			<li><a class="dropdown-item list-item" href="../es/"><span>ES - SPAIN <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
 			<li><a class="dropdown-item list-item" href="../se/"><span>SE - SWEDEN <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
-			<li><a class="dropdown-item list-item" href="../euro-agency/"><span>WW - WORLDWIDE <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
+			<li><a class="dropdown-item list-item" href="../"><span>WW - WORLDWIDE <span class="visually-hidden" data-i18n="selezionata"></span></span></a></li>
           </ul>
         </div>
       </div>
