--- a/_includes/footer/footer-col-1.html
+++ b/_includes/footer/footer-col-1.html
@@ -4,7 +4,7 @@
 </p>
 <div class="link-list-wrapper">
   <ul class="footer-list link-list clearfix">
-    <li><a class="list-item" href="#" title="Link 1">Link 1</a></li>
-    <li><a class="list-item" href="#" title="Link 2">Link 2</a></li>
+    <li><a class="list-item" href="#" title="rabbit inc.">rabbit inc.</a></li>
+    <li><a class="list-item" href="#" title="Hostinger">Hostinger</a></li>
   </ul>
 </div>
