--- a/_includes/header/header-lang-switch.html
+++ b/_includes/header/header-lang-switch.html
@@ -4,7 +4,7 @@
 <!-- Country Switch -->
 <div class="nav-item dropdown">
   <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-expanded="false">
-    <span>Other countries</span>
+    <span>{{ site.countries_label[page.lang] }}</span>
     <svg class="icon d-none d-lg-block">
       <use xlink:href="/euro-agency/assets/bootstrap-italia/dist/svg/sprite.svg#it-expand"></use>
     </svg>
