--- a/_includes/footer/footer-col-1.html
+++ b/_includes/footer/footer-col-1.html
@@ -1,4 +1,4 @@
-<h4><a href="#" title="Vai alla pagina: Contatti">Contatti</a></h4>
+<h4><a href="#" title="{{ site.contacts_label[page.lang] }}">{{ site.contacts_label[page.lang] }}</a></h4>
 <p>
   <strong>Lorem ipsum</strong><br> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 </p>
