--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -6,3 +6,32 @@
 
 <!-- Main JS -->
 <script src="{{ site.baseurl }}/assets/main.js"></script>
+
+<!-- Smartsupp Live Chat script -->
+<script type="text/javascript">
+var _smartsupp = _smartsupp || {};
+_smartsupp.key = '61934f22d13e4d24279a3d0e790384a50c4d82c9';
+window.smartsupp||(function(d) {
+  var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
+  s=d.getElementsByTagName('script')[0];c=d.createElement('script');
+  c.type='text/javascript';c.charset='utf-8';c.async=true;
+  c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
+})(document);
+</script>
+<noscript> Powered by <a href=“https://www.smartsupp.com” target=“_blank”>Smartsupp</a></noscript>
+
+<script>
+if (window.location.href.indexOf("/de/") > -1) { //choose URL
+  smartsupp('language', 'de'); //set DE language
+} else if (window.location.href.indexOf("/it/") > -1) { //choose URL
+  smartsupp('language', 'it'); // set IT language
+} else if (window.location.href.indexOf("/ro/") > -1) { //choose URL
+  smartsupp('language', 'ro'); // set RO language
+} else if (window.location.href.indexOf("/fr/") > -1) { //choose URL
+  smartsupp('language', 'fr'); // set FR language
+} else if (window.location.href.indexOf("/es/") > -1) { //choose URL
+  smartsupp('language', 'es'); // set ES language
+} else {
+  smartsupp('language', 'en'); // set EN language
+}
+</script>
