--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -21,15 +21,15 @@ window.smartsupp||(function(d) {
 <noscript> Powered by <a href=“https://www.smartsupp.com” target=“_blank”>Smartsupp</a></noscript>
 
 <script>
-if (window.location.href.indexOf("/de/") > -1) { //choose URL
+if (window.location.href.indexOf("https://rabbit-world.github.io/euro-agency/de/") > -1) { //choose URL
   smartsupp('language', 'de'); //set DE language
-} else if (window.location.href.indexOf("/it/") > -1) { //choose URL
+} else if (window.location.href.indexOf("https://rabbit-world.github.io/euro-agency/it/") > -1) { //choose URL
   smartsupp('language', 'it'); // set IT language
-} else if (window.location.href.indexOf("/ro/") > -1) { //choose URL
+} else if (window.location.href.indexOf("https://rabbit-world.github.io/euro-agency/ro/") > -1) { //choose URL
   smartsupp('language', 'ro'); // set RO language
-} else if (window.location.href.indexOf("/fr/") > -1) { //choose URL
+} else if (window.location.href.indexOf("https://rabbit-world.github.io/euro-agency/fr/") > -1) { //choose URL
   smartsupp('language', 'fr'); // set FR language
-} else if (window.location.href.indexOf("/es/") > -1) { //choose URL
+} else if (window.location.href.indexOf("https://rabbit-world.github.io/euro-agency/es/") > -1) { //choose URL
   smartsupp('language', 'es'); // set ES language
 } else {
   smartsupp('language', 'en'); // set EN language
